updated mobile view -class descriptions are no longer visible on mobile -exercise buttons are no longer visible on mobile

--- a/styles.css
+++ b/styles.css
@@ -347,3 +347,6 @@ i {
   padding-right:0px;
   padding-left: 0px;
 }
+.small-device-div{
+  padding: 5px;
+}
